# AdventOfCode

./: .gitignore  CMakeLists.txt  build_and_run_c.sh  pyrightconfig.json  setup_shell.sh
2023/day1/: day1.c  day1.py  prompt.txt  solution.txt
2023/day3/: day3.c  day3.py  example_input.txt  example_solution.txt  solution.txt
2023/day4/: day4.py  example_solution.txt  solution.txt
2024/day01/: .clangd  Makefile  main.cpp  main.hs  main.py
2024/day02/: CMakeLists.txt  main.cpp  main.hs  main.py
2024/day03/: CMakeLists.txt  main.cpp  main.py
2024/day04/: main.cpp  main.py
2024/day05/: main.cpp  main.py
2024/day06/: main.py
2024/day07/: main.py
2024/day09/: main.py
2024/day1/: .clangd  main.cpp  main.py  main_part1.cpp  main_part1.py  main_part2.py
2024/day10/: main.py
2024/day11/: main.py
2024/day12/: main.py
2024/day13/: main.py
2024/day14/: main.py
2024/day15/: main.py
2024/day16/: main.py
2024/day17/: main.py
2024/day18/: main.py
2024/day19/: main.py
2024/day2/: .clangd  main.py
2024/day20/: main.py
2024/day21/: main.py
2024/day22/: main.py
2024/day23/: main.py
2024/day24/: main.py
2024/day25/: main.py
2024/day3/: main.py
2024/day4/: main.py
2024/day5/: main.py
2024/day6/: main.py
2024/day7/: main.py
2024/day8/: main.py
2025/day01/: main.py
2025/day02/: main.py
2025/day03/: main.py
2025/day04/: main.py
aoc_utils/c/: Makefile
aoc_utils/cpp/: aoc_utils.cpp  aoc_utils.tpp
aoc_utils/python/: aoc_utils.py  pyproject.toml
aoc_utils/python/aoc_utils/: aoc_utils.py
cmake/: ProjectOptions.cmake  SystemFeatureChecks.cmake
include/: my_utils.h
lib/c/include/: my_utils.h
lib/cpp/: CMakeLists.txt  aoc_utils.cpp  aoc_utils.hpp  aoc_utils.tpp  build_and_run_cpp.sh  run.cpp  run.hpp
lib/python/: aoc_utils.py  pyproject.toml
src/: my_utils.c
utils/: my_utils.c
